@@ -2,6 +2,7 @@
 24-Nov-2010,  version 1.7-2
 crosstab can now return results in 'long' format
 more complete and flexible recycling in overlay and Arith
+Added boxplot function for Raster* objects
 
 --------------------------------------------
 23-Nov-2010,  version 1.7-1
@@ -32,7 +33,7 @@ Added drop=FALSE to "[" methods, to return a Raster*.
 
 --------------------------------------------
 10-Nov-2010,  version 1.6-17
-[[ method to extract layers from multi-layer objecs
+[[ method to extract layers from multi-layer Raster objects
 Writing cdf files now uses the CF standard 'degrees_east' and 'degrees_north' as variable names in lon/lat data (suggested by Kevin Ummel)
 
 --------------------------------------------
